--- a/index.html
+++ b/index.html
@@ -40,6 +40,36 @@
                     <p class="name">Александр Антропов</p>
                     <h1 class="title-h1">web-разработчик</h1>
                 </div>
+                <div class="social">
+                    <div class="social-item">
+                        <p class="project"><span>Обсудить проект</span><span class="project-img"></span></p>
+                    </div>
+                    <div class="social-item"><ul class="nav">
+                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
+                    </ul>
+                </div>
+                </div>
+                <div class="skill">
+                    <div class="skill-item">
+                        <h3 class="title-h3">FRONT-END</h3>
+                        <div class="description">HTML+CSS+JS кодирование дизайнов любой сложности</div>
+                    </div>
+                    <div class="skill-item">
+                        <h3 class="title-h3">Back-end</h3>
+                        <div class="description">Разработка сложной back-end логики для готового front-end</div>
+                    </div>
+                    <div class="skill-item">
+                        <h3 class="title-h3">WORDPRESS</h3>
+                        <div class="description">Разработка сайтов - от блога до интернет магазина</div>
+                    </div>
+                    <div class="skill-item">
+                        <h3 class="title-h3">SEO продвижение</h3>
+                        <div class="description">Качественное улучшение позиций сайта в поисковой выдаче</div>
+                    </div>
+
+                </div>
         
             </main>
     
